tests/ui/typeck/typeck-builtin-bound-type-parameters.stderr
error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:1:11
   |
LL | fn foo1<T:Copy<U>, U>(x: T) {}
   |           ^^^^ expected 0 generic arguments
   |
help: remove these generics
   |
LL - fn foo1<T:Copy<U>, U>(x: T) {}
LL + fn foo1<T:Copy, U>(x: T) {}
   |

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:14
   |
LL | trait Trait: Copy<dyn Send> {}
   |              ^^^^ expected 0 generic arguments
   |
help: remove these generics
   |
LL - trait Trait: Copy<dyn Send> {}
LL + trait Trait: Copy {}
   |

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:14
   |
LL | trait Trait: Copy<dyn Send> {}
   |              ^^^^ expected 0 generic arguments
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: remove these generics
   |
LL - trait Trait: Copy<dyn Send> {}
LL + trait Trait: Copy {}
   |

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:14
   |
LL | trait Trait: Copy<dyn Send> {}
   |              ^^^^ expected 0 generic arguments
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: remove these generics
   |
LL - trait Trait: Copy<dyn Send> {}
LL + trait Trait: Copy {}
   |

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:9:21
   |
LL | struct MyStruct1<T: Copy<T>>(T);
   |                     ^^^^ expected 0 generic arguments
   |
help: remove these generics
   |
LL - struct MyStruct1<T: Copy<T>>(T);
LL + struct MyStruct1<T: Copy>(T);
   |

error[E0107]: trait takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:12:25
   |
LL | struct MyStruct2<'a, T: Copy<'a>>(&'a T);
   |                         ^^^^ expected 0 lifetime arguments
   |
help: remove these generics
   |
LL - struct MyStruct2<'a, T: Copy<'a>>(&'a T);
LL + struct MyStruct2<'a, T: Copy>(&'a T);
   |

error[E0107]: trait takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:15:15
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |               ^^^^ expected 0 lifetime arguments
   |
help: remove this lifetime argument
   |
LL - fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
LL + fn foo2<'a, T:Copy<, U>, U>(x: T) {}
   |

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:15:15
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |               ^^^^ expected 0 generic arguments
   |
help: remove this generic argument
   |
LL - fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
LL + fn foo2<'a, T:Copy<'a, >, U>(x: T) {}
   |

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0107`.
